changed Integer to int, added english morphology

--- a/indexer/pom.xml
+++ b/indexer/pom.xml
@@ -48,6 +48,16 @@
             <artifactId>russian</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene.morphology</groupId>
+            <artifactId>english</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>csc.vlpol.infret</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <repositories>
