--- a/searcher/pom.xml
+++ b/searcher/pom.xml
@@ -42,6 +42,14 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>csc.vlpol.infret</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <pluginRepositories>
         <pluginRepository>
             <id>onejar-maven-plugin.googlecode.com</id>
